--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>AKZ Currency Converter</h1>
+        <h1>sambila.net - Currency Converter</h1>
         
         <!-- Rate Editor Section -->
         <div class="rate-editor">
